@@ -5,24 +5,32 @@ import com.amazonaws.services.lambda.runtime.events.APIGatewayProxyRequestEvent;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.gson.Gson;
+import com.nimbusds.jwt.SignedJWT;
 import org.apache.http.HttpStatus;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import uk.gov.di.ipv.core.library.auditing.AuditEvent;
+import uk.gov.di.ipv.core.library.auditing.AuditEventTypes;
+import uk.gov.di.ipv.core.library.auditing.AuditEventUser;
+import uk.gov.di.ipv.core.library.auditing.AuditExtensionGpg45ProfileMatched;
 import uk.gov.di.ipv.core.library.domain.ErrorResponse;
 import uk.gov.di.ipv.core.library.domain.JourneyResponse;
+import uk.gov.di.ipv.core.library.domain.gpg45.Gpg45Profile;
 import uk.gov.di.ipv.core.library.domain.gpg45.Gpg45ProfileEvaluator;
-import uk.gov.di.ipv.core.library.domain.gpg45.domain.CredentialEvidenceItem;
-import uk.gov.di.ipv.core.library.domain.gpg45.domain.DcmawCheckMethod;
+import uk.gov.di.ipv.core.library.domain.gpg45.Gpg45Scores;
 import uk.gov.di.ipv.core.library.domain.gpg45.exception.UnknownEvidenceTypeException;
 import uk.gov.di.ipv.core.library.dto.ClientSessionDetailsDto;
 import uk.gov.di.ipv.core.library.dto.CredentialIssuerConfig;
+import uk.gov.di.ipv.core.library.dto.VcStatusDto;
 import uk.gov.di.ipv.core.library.exceptions.CiRetrievalException;
 import uk.gov.di.ipv.core.library.persistence.item.IpvSessionItem;
+import uk.gov.di.ipv.core.library.service.AuditService;
 import uk.gov.di.ipv.core.library.service.CiStorageService;
 import uk.gov.di.ipv.core.library.service.ConfigurationService;
 import uk.gov.di.ipv.core.library.service.IpvSessionService;
@@ -32,20 +40,21 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.text.ParseException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static uk.gov.di.ipv.core.evaluategpg45scores.EvaluateGpg45ScoresHandler.ACCEPTED_PROFILES;
 import static uk.gov.di.ipv.core.evaluategpg45scores.EvaluateGpg45ScoresHandler.JOURNEY_END;
 import static uk.gov.di.ipv.core.evaluategpg45scores.EvaluateGpg45ScoresHandler.JOURNEY_NEXT;
 import static uk.gov.di.ipv.core.library.fixtures.TestFixtures.M1A_ADDRESS_VC;
-import static uk.gov.di.ipv.core.library.fixtures.TestFixtures.M1A_FAILED_PASSPORT_VC;
 import static uk.gov.di.ipv.core.library.fixtures.TestFixtures.M1A_FRAUD_VC;
 import static uk.gov.di.ipv.core.library.fixtures.TestFixtures.M1A_PASSPORT_VC;
 import static uk.gov.di.ipv.core.library.fixtures.TestFixtures.M1A_VERIFICATION_VC;
@@ -65,16 +74,8 @@ class EvaluateGpg45ScoreHandlerTest {
                     M1A_FRAUD_VC,
                     M1A_VERIFICATION_VC,
                     M1B_DCMAW_VC);
-    public static final List<String> FAILED_PASSPORT_CREDENTIALS =
-            List.of(
-                    M1A_FAILED_PASSPORT_VC,
-                    M1A_ADDRESS_VC,
-                    M1A_FRAUD_VC,
-                    M1A_VERIFICATION_VC,
-                    M1B_DCMAW_VC);
-    public static final Map<CredentialEvidenceItem.EvidenceType, List<CredentialEvidenceItem>>
-            EVIDENCE_MAP = generateEvidenceMap();
     public static CredentialIssuerConfig addressConfig = null;
+    private static final List<SignedJWT> PARSED_CREDENTIALS = new ArrayList<>();
 
     static {
         try {
@@ -103,6 +104,7 @@ class EvaluateGpg45ScoreHandlerTest {
     @Mock private Gpg45ProfileEvaluator gpg45ProfileEvaluator;
     @Mock private CiStorageService ciStorageService;
     @Mock private ConfigurationService configurationService;
+    @Mock private AuditService auditService;
     @InjectMocks private EvaluateGpg45ScoresHandler evaluateGpg45ScoresHandler;
 
     private final Gson gson = new Gson();
@@ -110,8 +112,11 @@ class EvaluateGpg45ScoreHandlerTest {
     private IpvSessionItem ipvSessionItem;
 
     @BeforeAll
-    static void setUp() {
+    static void setUp() throws Exception {
         event.setHeaders(Map.of(IPV_SESSION_ID_HEADER, TEST_SESSION_ID));
+        for (String cred : CREDENTIALS) {
+            PARSED_CREDENTIALS.add(SignedJWT.parse(cred));
+        }
     }
 
     @BeforeEach
@@ -121,41 +126,18 @@ class EvaluateGpg45ScoreHandlerTest {
         clientSessionDetailsDto.setUserId(TEST_USER_ID);
         clientSessionDetailsDto.setGovukSigninJourneyId(TEST_JOURNEY_ID);
         ipvSessionItem.setClientSessionDetails(clientSessionDetailsDto);
+        ipvSessionItem.setIpvSessionId(TEST_SESSION_ID);
     }
 
     @Test
     void shouldReturnJourneySessionEndIfScoresSatisfyM1AGpg45Profile() throws Exception {
-        Map<CredentialEvidenceItem.EvidenceType, List<CredentialEvidenceItem>> evidenceMap =
-                Map.of(
-                        CredentialEvidenceItem.EvidenceType.ACTIVITY,
-                        new ArrayList<>(),
-                        CredentialEvidenceItem.EvidenceType.EVIDENCE,
-                        Collections.singletonList(
-                                new CredentialEvidenceItem(4, 2, Collections.emptyList())),
-                        CredentialEvidenceItem.EvidenceType.IDENTITY_FRAUD,
-                        Collections.singletonList(
-                                new CredentialEvidenceItem(
-                                        CredentialEvidenceItem.EvidenceType.IDENTITY_FRAUD,
-                                        2,
-                                        Collections.emptyList())),
-                        CredentialEvidenceItem.EvidenceType.VERIFICATION,
-                        Collections.singletonList(
-                                new CredentialEvidenceItem(
-                                        CredentialEvidenceItem.EvidenceType.VERIFICATION,
-                                        2,
-                                        Collections.emptyList())),
-                        CredentialEvidenceItem.EvidenceType.DCMAW,
-                        new ArrayList<>());
-
         when(configurationService.getCredentialIssuer(any())).thenReturn(addressConfig);
         when(ipvSessionService.getIpvSession(TEST_SESSION_ID)).thenReturn(ipvSessionItem);
-        when(userIdentityService.getUserIssuedCredentials(TEST_USER_ID)).thenReturn(CREDENTIALS);
-        when(gpg45ProfileEvaluator.parseGpg45ScoresFromCredentials(CREDENTIALS))
-                .thenReturn(evidenceMap);
+        when(gpg45ProfileEvaluator.parseCredentials(any())).thenReturn(PARSED_CREDENTIALS);
         when(gpg45ProfileEvaluator.getJourneyResponseForStoredCis(any()))
                 .thenReturn(Optional.empty());
-        when(gpg45ProfileEvaluator.credentialsSatisfyAnyProfile(evidenceMap, ACCEPTED_PROFILES))
-                .thenReturn(true);
+        when(gpg45ProfileEvaluator.getFirstMatchingProfile(any(), eq(ACCEPTED_PROFILES)))
+                .thenReturn(Optional.of(Gpg45Profile.M1A));
 
         var response = evaluateGpg45ScoresHandler.handleRequest(event, context);
         JourneyResponse journeyResponse = gson.fromJson(response.getBody(), JourneyResponse.class);
@@ -163,41 +145,41 @@ class EvaluateGpg45ScoreHandlerTest {
         assertEquals(HttpStatus.SC_OK, response.getStatusCode());
         assertEquals(JOURNEY_END, journeyResponse);
         verify(userIdentityService).getUserIssuedCredentials(TEST_USER_ID);
+
+        ArgumentCaptor<IpvSessionItem> ipvSessionItemArgumentCaptor =
+                ArgumentCaptor.forClass(IpvSessionItem.class);
+        verify(ipvSessionService).updateIpvSession(ipvSessionItemArgumentCaptor.capture());
+        IpvSessionItem updatedSessionItem = ipvSessionItemArgumentCaptor.getValue();
+
+        List<VcStatusDto> currentVcStatuses = updatedSessionItem.getCurrentVcStatuses();
+        assertEquals(5, currentVcStatuses.size());
+
+        assertTrue(currentVcStatuses.get(0).getIsSuccessfulVc());
+        assertEquals(
+                "https://review-p.integration.account.gov.uk",
+                currentVcStatuses.get(0).getCriIss());
+        assertFalse(currentVcStatuses.get(1).getIsSuccessfulVc());
+        assertEquals(
+                "https://review-a.integration.account.gov.uk",
+                currentVcStatuses.get(1).getCriIss());
+        assertTrue(currentVcStatuses.get(2).getIsSuccessfulVc());
+        assertEquals(
+                "https://review-f.integration.account.gov.uk",
+                currentVcStatuses.get(2).getCriIss());
+        assertTrue(currentVcStatuses.get(3).getIsSuccessfulVc());
+        assertEquals("https://example.com/issuer", currentVcStatuses.get(3).getCriIss());
+        assertTrue(currentVcStatuses.get(4).getIsSuccessfulVc());
+        assertEquals("issuer", currentVcStatuses.get(4).getCriIss());
     }
 
     @Test
     void shouldReturnJourneySessionEndIfScoresSatisfyM1BGpg45Profile() throws Exception {
-        Map<CredentialEvidenceItem.EvidenceType, List<CredentialEvidenceItem>> evidenceMap =
-                Map.of(
-                        CredentialEvidenceItem.EvidenceType.ACTIVITY, new ArrayList<>(),
-                        CredentialEvidenceItem.EvidenceType.EVIDENCE, new ArrayList<>(),
-                        CredentialEvidenceItem.EvidenceType.IDENTITY_FRAUD,
-                                Collections.singletonList(
-                                        new CredentialEvidenceItem(
-                                                CredentialEvidenceItem.EvidenceType.IDENTITY_FRAUD,
-                                                2,
-                                                Collections.emptyList())),
-                        CredentialEvidenceItem.EvidenceType.VERIFICATION, new ArrayList<>(),
-                        CredentialEvidenceItem.EvidenceType.DCMAW,
-                                Collections.singletonList(
-                                        new CredentialEvidenceItem(
-                                                3,
-                                                2,
-                                                1,
-                                                2,
-                                                Collections.singletonList(new DcmawCheckMethod()),
-                                                null,
-                                                Collections.emptyList())));
-
-        when(configurationService.getCredentialIssuer(any())).thenReturn(addressConfig);
         when(ipvSessionService.getIpvSession(TEST_SESSION_ID)).thenReturn(ipvSessionItem);
         when(userIdentityService.getUserIssuedCredentials(TEST_USER_ID)).thenReturn(CREDENTIALS);
-        when(gpg45ProfileEvaluator.parseGpg45ScoresFromCredentials(CREDENTIALS))
-                .thenReturn(evidenceMap);
         when(gpg45ProfileEvaluator.getJourneyResponseForStoredCis(any()))
                 .thenReturn(Optional.empty());
-        when(gpg45ProfileEvaluator.credentialsSatisfyAnyProfile(evidenceMap, ACCEPTED_PROFILES))
-                .thenReturn(true);
+        when(gpg45ProfileEvaluator.getFirstMatchingProfile(any(), eq(ACCEPTED_PROFILES)))
+                .thenReturn(Optional.of(Gpg45Profile.M1B));
 
         var response = evaluateGpg45ScoresHandler.handleRequest(event, context);
         JourneyResponse journeyResponse = gson.fromJson(response.getBody(), JourneyResponse.class);
@@ -209,37 +191,12 @@ class EvaluateGpg45ScoreHandlerTest {
 
     @Test
     void shouldReturnJourneyNextIfScoresDoNotSatisfyM1AGpg45Profile() throws Exception {
-        when(configurationService.getCredentialIssuer(any())).thenReturn(addressConfig);
         when(ipvSessionService.getIpvSession(TEST_SESSION_ID)).thenReturn(ipvSessionItem);
         when(userIdentityService.getUserIssuedCredentials(TEST_USER_ID)).thenReturn(CREDENTIALS);
-        when(gpg45ProfileEvaluator.parseGpg45ScoresFromCredentials(CREDENTIALS))
-                .thenReturn(EVIDENCE_MAP);
         when(gpg45ProfileEvaluator.getJourneyResponseForStoredCis(any()))
                 .thenReturn(Optional.empty());
-        when(gpg45ProfileEvaluator.credentialsSatisfyAnyProfile(EVIDENCE_MAP, ACCEPTED_PROFILES))
-                .thenReturn(false);
-
-        var response = evaluateGpg45ScoresHandler.handleRequest(event, context);
-        JourneyResponse journeyResponse = gson.fromJson(response.getBody(), JourneyResponse.class);
-
-        assertEquals(HttpStatus.SC_OK, response.getStatusCode());
-        assertEquals(JOURNEY_NEXT, journeyResponse);
-        verify(userIdentityService).getUserIssuedCredentials(TEST_USER_ID);
-    }
-
-    @Test
-    void shouldReturnJourneyNextIfScoresDoNotSatisfyM1AGpg45ProfileAndPassportScoresAreNotValid()
-            throws Exception {
-        when(configurationService.getCredentialIssuer(any())).thenReturn(addressConfig);
-        when(ipvSessionService.getIpvSession(TEST_SESSION_ID)).thenReturn(ipvSessionItem);
-        when(userIdentityService.getUserIssuedCredentials(TEST_USER_ID))
-                .thenReturn(FAILED_PASSPORT_CREDENTIALS);
-        when(gpg45ProfileEvaluator.parseGpg45ScoresFromCredentials(FAILED_PASSPORT_CREDENTIALS))
-                .thenReturn(EVIDENCE_MAP);
-        when(gpg45ProfileEvaluator.getJourneyResponseForStoredCis(any()))
+        when(gpg45ProfileEvaluator.getFirstMatchingProfile(any(), eq(ACCEPTED_PROFILES)))
                 .thenReturn(Optional.empty());
-        when(gpg45ProfileEvaluator.credentialsSatisfyAnyProfile(EVIDENCE_MAP, ACCEPTED_PROFILES))
-                .thenReturn(false);
 
         var response = evaluateGpg45ScoresHandler.handleRequest(event, context);
         JourneyResponse journeyResponse = gson.fromJson(response.getBody(), JourneyResponse.class);
@@ -264,9 +221,7 @@ class EvaluateGpg45ScoreHandlerTest {
     @Test
     void shouldReturn500IfFailedToParseCredentials() throws Exception {
         when(ipvSessionService.getIpvSession(TEST_SESSION_ID)).thenReturn(ipvSessionItem);
-        when(userIdentityService.getUserIssuedCredentials(TEST_USER_ID)).thenReturn(CREDENTIALS);
-        when(gpg45ProfileEvaluator.parseGpg45ScoresFromCredentials(CREDENTIALS))
-                .thenThrow(new ParseException("Whoops", 0));
+        when(gpg45ProfileEvaluator.buildScore(any())).thenThrow(new ParseException("Whoops", 0));
 
         var response = evaluateGpg45ScoresHandler.handleRequest(event, context);
         Map<String, Object> responseMap =
@@ -285,13 +240,7 @@ class EvaluateGpg45ScoreHandlerTest {
     @Test
     void shouldReturn500IfCredentialOfUnknownType() throws Exception {
         when(ipvSessionService.getIpvSession(TEST_SESSION_ID)).thenReturn(ipvSessionItem);
-        when(userIdentityService.getUserIssuedCredentials(TEST_USER_ID)).thenReturn(CREDENTIALS);
-        when(gpg45ProfileEvaluator.parseGpg45ScoresFromCredentials(CREDENTIALS))
-                .thenReturn(EVIDENCE_MAP);
-        when(gpg45ProfileEvaluator.getJourneyResponseForStoredCis(any()))
-                .thenReturn(Optional.empty());
-        when(gpg45ProfileEvaluator.credentialsSatisfyAnyProfile(EVIDENCE_MAP, ACCEPTED_PROFILES))
-                .thenThrow(new UnknownEvidenceTypeException());
+        when(gpg45ProfileEvaluator.buildScore(any())).thenThrow(new UnknownEvidenceTypeException());
 
         var response = evaluateGpg45ScoresHandler.handleRequest(event, context);
         Map<String, Object> responseMap =
@@ -342,15 +291,43 @@ class EvaluateGpg45ScoreHandlerTest {
                 ErrorResponse.FAILED_TO_GET_STORED_CIS.getMessage(), responseMap.get("message"));
     }
 
-    private static Map<CredentialEvidenceItem.EvidenceType, List<CredentialEvidenceItem>>
-            generateEvidenceMap() {
-        return Map.of(
-                CredentialEvidenceItem.EvidenceType.ACTIVITY, new ArrayList<>(),
-                CredentialEvidenceItem.EvidenceType.EVIDENCE,
-                        Collections.singletonList(
-                                new CredentialEvidenceItem(4, 2, Collections.emptyList())),
-                CredentialEvidenceItem.EvidenceType.IDENTITY_FRAUD, new ArrayList<>(),
-                CredentialEvidenceItem.EvidenceType.VERIFICATION, new ArrayList<>(),
-                CredentialEvidenceItem.EvidenceType.DCMAW, new ArrayList<>());
+    @Test
+    void shouldSendAuditEventWhenProfileMatched() throws Exception {
+        List<SignedJWT> parsedM1ACreds =
+                List.of(
+                        SignedJWT.parse(M1A_PASSPORT_VC),
+                        SignedJWT.parse(M1A_ADDRESS_VC),
+                        SignedJWT.parse(M1A_FRAUD_VC),
+                        SignedJWT.parse(M1A_VERIFICATION_VC));
+        when(configurationService.getCredentialIssuer(any())).thenReturn(addressConfig);
+        when(gpg45ProfileEvaluator.parseCredentials(any())).thenReturn(parsedM1ACreds);
+        when(ipvSessionService.getIpvSession(TEST_SESSION_ID)).thenReturn(ipvSessionItem);
+        when(gpg45ProfileEvaluator.getJourneyResponseForStoredCis(any()))
+                .thenReturn(Optional.empty());
+        when(gpg45ProfileEvaluator.getFirstMatchingProfile(any(), eq(ACCEPTED_PROFILES)))
+                .thenReturn(Optional.of(Gpg45Profile.M1A));
+        when(gpg45ProfileEvaluator.buildScore(any()))
+                .thenReturn(new Gpg45Scores(Gpg45Scores.EV_42, 0, 1, 2));
+
+        evaluateGpg45ScoresHandler.handleRequest(event, context);
+
+        ArgumentCaptor<AuditEvent> auditEventCaptor = ArgumentCaptor.forClass(AuditEvent.class);
+        verify(auditService).sendAuditEvent(auditEventCaptor.capture());
+        AuditEvent auditEvent = auditEventCaptor.getValue();
+
+        assertEquals(AuditEventTypes.IPV_GPG45_PROFILE_MATCHED, auditEvent.getEventName());
+
+        AuditEventUser user = auditEvent.getUser();
+        assertEquals(TEST_USER_ID, user.getUserId());
+        assertEquals(TEST_JOURNEY_ID, user.getGovukSigninJourneyId());
+        assertEquals(TEST_SESSION_ID, user.getSessionId());
+
+        AuditExtensionGpg45ProfileMatched extension =
+                (AuditExtensionGpg45ProfileMatched) auditEvent.getExtensions();
+        assertEquals(Gpg45Profile.M1A, extension.getGpg45Profile());
+        assertEquals(new Gpg45Scores(Gpg45Scores.EV_42, 0, 1, 2), extension.getGpg45Scores());
+        assertEquals(
+                List.of("123ab93d-3a43-46ef-a2c1-3c6444206408", "RB000103490087", "abc1234"),
+                extension.getVcTxnIds());
     }
 }
